Changelog for JsonFormBuilder
=========================================

JsonFormBuilder 1.0.21-pl - 26th May 2014
=========================================
- Add ability to read and modify form action via get/setFormAction methods (handy for custom posts to non MODX resources).
- Remove old legacy posthook code.

JsonFormBuilder 1.0.20-pl - 8th May 2014
=========================================
- Added placeholders for JSON forms. Can now use placeholders such as [[++emailsender]] or [[+postVal.email_address]] etc.
- Added ability to add any attribute you like to a form element. You can now add class, placeholder etc using "extraElementAttribs":{"placeholder":"test","class":"testing"} with JSON or the setExtraElementAttribs() method.

JsonFormBuilder 1.0.19-pl - 30th Mar 2014
=========================================
- Add ability to disable spam protection.

JsonFormBuilder 1.0.18-pl - 10th Mar 2014
=========================================
- Form rules and conditions for JSON formats.
- Add example for manually handling form submission and checking validation.
- Restructure of validate/form build / js build.

JsonFormBuilder 1.0.17-pl - 10th Mar 2014
=========================================
- Basic JSON form example - In process of building JSON form processing.
- More JSON functions, specify now inline, add a file path or as a chunk.

JsonFormBuilder 1.0.15-pl - 10th Mar 2014
=========================================
- Custom rules implemented.
- Add ability to specify CC and BCC with string email address or array of addresses. Add examples to doc forms.
- Added Auto Responders and extra debug info for email addresses.
- Validate modx object. Throw error if email addresses are not valid when sending (cant be before send as some email addresses may be dynamic after submit).
- Add conditions example.

JsonFormBuilder 1.0.14-pl - 1st Mar 2014
=========================================
- Added conditionShow rule type.